included profile photos of authors, contributors and person publishers using schema:image from schema:Person.

--- a/templates/html_template.html
+++ b/templates/html_template.html
@@ -108,6 +108,7 @@
           </div>
         {% else %}
           <div class="publisher-person">
+            <div><a href="http://schema.org/image">photo:</a><br> <img src="{{ publisherimage }}" alt="Photo of dataset publisher" width="150"></img></div>
             <div><a href="http://schema.org/name">name:</a><br> {{publisherpersonname}}</div>
             <div><a href="http://schema.org/jobTitle">job title:</a><br> {{publisherpersonjobTitle}}</div>
             <div><a href="http://schema.org/email">email:</a><br> {{publisheremail}}</div>
