--- a/templates/html_template.html
+++ b/templates/html_template.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="HandheldFriendly" content="true" />
     <meta name="MobileOptimized" content="width" />
-    <link type="text/css" rel="stylesheet" href="css/style.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/kodymoodley/fair-metadata-html-page-generator/main/testdata/outputdata/css/style.css" media="all" />
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script type="application/ld+json">
       {{jsonld}}
